--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,50 @@ body{
   color: red;
   transition: 1s;
 }
+
+#parenteses{
+  position: relative;
+}
+.separado{
+position: absolute;
+display: grid;
+grid-template-columns: 1fr 1fr;
+width: 100%;
+height: 100%;
+top: 0;
+}
+.z_index{
+  z-index: -1;
+}
+#abre{
+  border-right: 1.83px solid black;
+  background: #323234 !important;
+}
+#fecha{
+  border-left: 1.83px solid black;
+  background: #323234 !important;
+}
+#abre:hover,#fecha:hover{
+  background: #3b3b3c !important;
+}
+.separado span{
+  position: absolute;
+  top: 15px;
+}
+#abre span{
+  left: 15px;
+}
+#fecha span{
+  left: 55px;
+}
+#bparent{
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ top: 0;
+}
+#bparent span{
+  position: absolute;
+  top: 15px;
+  left: 30px;
+}
